# bachelor_thesis_pascal_machnik

./: README.md
run2_analysis/: BDT_preprocessing.py  BDT_preselection.py  BDT_preselection_Jpsi.py  FOM.py  Jpsi_preprocessing.py  PTETA_preprocessing.py  Snakefile  TMVA.py  addL0DiMuonweights_Run2.C  addL0Muonweights_Run2.C  addPTETAweights_det.C  analysis_config.yml  corr_PTETA_det.C  define.py  filter.py  lhcbStyle.C  mass_fit_JpKs_channel_MC.py  mass_fit_Jpsi_channel_MC.py  mass_fit_Jpsi_channel_data.py  mass_fit_RM_channel_MC.py  mass_fit_RM_channel_MC_1516.py  mass_fit_RM_channel_data.py  mass_fit_RM_channel_data_1516.py  pid_correct.py  pid_preprocessing.py  plot_config.yml  sWeights_Jpsi.py  sWeights_RM_1516.py  signal_efficiency.py  weights_MC.py
run2_analysis/plot_scripts/: BDT_check.py  BDT_plots.py  MC_Data_agreement.py  armentos_podolanski.py  pid_plots.py  plot_functions.py
run2_analysis/trackcalib2/lib/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
run2_analysis/trackcalib2/lib/src/TCFit/: advanced_pdfs.py  basic_pdfs.py  dataset.py  error_messages.py  exceptions.py  extensions.py  fit.py  formula.py  helpers.py  histogram.py  latex_format.py  loss.py  model.py  monitoring.py  parameter.py  pdf.py  plot.py  standards.py  stats.py
run2_analysis/trackcalib2/lib/tests/: addpdf_utest.py  extendedpdf_utest.py  fitting_utest.py  formula_utest.py  model_utest.py  parameter_utest.py  pdfs_utest.py
run3_analysis/: Snakefile  analysis_config.yml  merge.py  signal_efficiency.py
thesis/: Makefile  references.bib  thesis.tex
(+49 files in other folders)
