[metadata]
name = TCFit
author = Flavio Archilli, Raphael Skuza
author_email = flavio.archilli@cern.ch, raphael.skuza@cern.ch
description = TrackCalib2 fitting library
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
url = https://gitlab.cern.ch/farchill/trackcalib_dev_run3
project_urls =
    Bug Tracker = https://gitlab.cern.ch/farchill/trackcalib_dev_run3/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    matplotlib
    mplhep
    numpy
    scipy
    iminuit
    numba
    pandas
    numexpr
    seaborn

[options.packages.find]
where = src
